# jarvis-relay

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.dev.yaml  fly.toml  pyproject.toml  pytest.ini  run.sh
.github/: dependabot.yml
.github/workflows/: docker-build-push.yml  test.yml
app/: alert_service.py  auth.py  config.py  expo_client.py  main.py  rate_limiter.py
jarvis_notifications_relay.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: conftest.py  test_alert_service.py  test_auth.py  test_limiter_bounds.py  test_oauth_bounce.py  test_rate_limiter.py  test_register.py  test_send.py
