[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jarvis-notifications-relay"
version = "0.1.0"
description = "Centralized push notification relay for Jarvis (Expo Push API proxy)"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "pydantic",
    "pydantic-settings",
    "python-dotenv",
    "PyJWT",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-httpx>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
include = ["app*"]
